BUGFIX Allow Overflow for Smaller Screens (#14)
* BUGFIX Allow screen overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@ html, body {
   height: 100%;
   width: 100%;
   background-color: #eeeeee;
+  overflow: auto;
 }
 
 // Material Overrides For Custom Colors
